Responsive: MODULE: AUTH

--- a/.env
+++ b/.env
@@ -7,3 +7,15 @@ DBPORT=3306
 
 # Server
 PORT=3000
+
+# Mailer
+MAILSERVICE=gmail
+MAILUSER=cordobaojhonjairo21@gmail.com
+MAILPASS=Jc1086921279
+
+# JWT
+JWTSECRET=123456
+JWTREFRESHSECRET=123456
+
+# Node
+NODEENV=development
