Responsive: MODULE: MEDIA

--- a/.env
+++ b/.env
@@ -19,3 +19,8 @@ JWTREFRESHSECRET=123456
 
 # Node
 NODEENV=development
+
+# Cloudinary
+CLOUDINARYNAME=del3gtz5i
+CLOUDINARYAPIKEY=818274586184946
+CLOUDINARYAPISECRET=fjqEQDpvq5lgAK6wqfJyOkZV0qc
