Responsive: MODULE: POSTS

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # Database
 DBHOST=localhost
 DBUSER=bloodyYue
-DBPASS=123456
-DBNAME=bloodyYueDB
+DBPASS=Jc1086921279
+DBNAME=BloodyYueDB
 DBPORT=3306
 
 # Server
@@ -11,7 +11,7 @@ PORT=3000
 # Mailer
 MAILSERVICE=gmail
 MAILUSER=cordobaojhonjairo21@gmail.com
-MAILPASS=Jc1086921279
+MAILPASS=cwrtljoiicynuvia
 
 # JWT
 JWTSECRET=123456
