--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^7.0.11",
+    "socket.io": "^4.8.3"
   }
 }
