--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch src/app.js"
+    "start": "node src/app.js",
+    "dev": "node --watch src/app.js",
+    "lint": "eslint src"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
